# market_trading

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  FABLE_HANDOFF.md  IMPLEMENTATION_PLAN.md  PLAN_PROMPT.md  README.md  conftest.py  package-lock.json  pyproject.toml
config/: agents.yaml  costs.yaml  envelope.yaml  limits.yaml  settings.yaml  themes.yaml
config/calendar/: 2024.yaml  2025.yaml  2026.yaml
config/universe/: nifty200_seed.csv
dashboard/: README.md
runbooks/: COMMANDS.md  RUNBOOK.md  WORKLOG.md  boot-log-investigation-2026-07-10.md
scripts/: a11_check.py  backfill.py  backfill_filings.py  backtest.py  dpapi_set.py  event_study.py  filings_experiments.py  nssm_install.ps1  q15_candle_latency.py  rescrape_costs.py  schedule_tasks.ps1  seed_protected_config.py  setup_token.ps1  smoke_test.py  validate_insider.py  watchdog.py
src/engine/: __init__.py  _preload.py
src/engine/api/: __init__.py  app.py  kite_callback.py
src/engine/api/routes/: __init__.py
src/engine/broker/: __init__.py  instruments.py  kite_client.py  rate_limiter.py  session.py  ticker_supervisor.py
src/engine/core/: __init__.py  bse_http.py  calendar.py  clock.py  config.py  db.py  enums.py  eventbus.py  log.py  nse_http.py  protected_store.py  types.py
src/engine/core/migrations/: 0001_initial.sql  0002_filings_backfill.sql  __init__.py  __main__.py
src/engine/datafeeds/: __init__.py  bhavcopy.py  corp_actions.py  deals.py  earnings_calendar.py  filings_events.py  filings_pit.py  filings_pit_fresh.py  filings_results.py  filings_shp.py  isin_map.py  news.py  news_pipeline.py  sector_map.py
src/engine/features/: __init__.py  engine.py  snapshots.py
src/engine/intelligence/: __init__.py  schemas.py
src/engine/intelligence/agents/: __init__.py
src/engine/learning/: __init__.py  reports.py  sweep.py  validate.py
src/engine/marketdata/: __init__.py  backfill.py  bar_builder.py  reconcile.py  store.py
src/engine/notify/: __init__.py  catalog.py  telegram.py
src/engine/oms/: __init__.py
src/engine/ops/: __init__.py  health.py  heartbeat.py  jobs.py  lifecycle.py  main.py  scheduler.py  selftest.py  warmup.py
src/engine/paper/: __init__.py
src/engine/risk/: __init__.py  events.py  kill.py  mode.py
src/engine/strategy/: __init__.py  cost_model.py  indicators.py  prescreen.py  types.py
src/engine/strategy/scanners/: __init__.py  base.py  momentum.py  orb.py  rsi2.py  trend.py
src/engine/universe/: __init__.py  builder.py  leverage.py  surveillance.py
tests/: conftest.py
tests/unit/: test_api_auth.py  test_backfill.py  test_backtest_cli.py  test_bar_builder.py  test_calendar_clock.py  test_catchup_runner.py  test_cost_model.py  test_datafeeds_eod.py  test_entity_resolver.py  test_event_study_filings.py  test_features.py  test_filings_events.py  test_filings_experiments.py  test_filings_feeds.py  test_filings_pit_fresh.py  test_headline_clusterer.py  test_heartbeat.py  test_import_graph.py  test_indicators.py  test_instruments.py  test_kill_switch.py  test_kite_client.py  test_lifecycle_selftest.py  test_log.py  test_market_store.py  test_migrations.py  test_mode_manager.py  test_news_ingest.py  test_notify_owner.py  test_nse_http.py  test_ops_main_wiring.py  test_prescreen.py  test_protected_store.py  test_rate_limiter.py  test_reconcile.py  test_scanners.py  test_schemas_roundtrip.py  test_sector_map.py  test_surveillance.py  test_sweep_signals.py  (+8 more)
tests/unit/fixtures/: bhavcopy_udiff.csv  block_deals.json  bse_error_page.html  bulk_deals.json  corp_actions.json  event_calendar.json  filings_pit.json  filings_pit_fresh.json  filings_results.json  nifty200_test.csv  peersmartsearch.html  sector_bank.csv  sector_it.csv  sector_psubank.csv  shp_detail.json  shp_master.json  shp_quarter_index.json
tests/unit/fixtures/news/: clusterer_expected.json  clusterer_headlines.json  et_markets_rss.xml  gdelt_artlist.json  moneycontrol_rss.xml
ticker/: main.py
